--- a/references.bib
+++ b/references.bib
@@ -1,19 +1,213 @@
-@article{knuth84,
-  author = {Knuth, Donald E.},
-  title = {Literate Programming},
-  year = {1984},
-  issue_date = {May 1984},
-  publisher = {Oxford University Press, Inc.},
-  address = {USA},
-  volume = {27},
-  number = {2},
-  issn = {0010-4620},
-  url = {https://doi.org/10.1093/comjnl/27.2.97},
-  doi = {10.1093/comjnl/27.2.97},
-  journal = {Comput. J.},
-  month = may,
-  pages = {97–111},
-  numpages = {15}
+@article{kruppa2019statistik,
+  title={Statistik lebendig lehren durch Storytelling und forschungsbasiertes Lernen},
+  author={Kruppa, Jochen and Kiehne, Bj{\"o}rn},
+  journal={Beitr{\"a}ge zu Praxis, Praxisforschung und Forschung Jahrgang 2019},
+  pages={501}
+}
+
+@incollection{feynman1998cargo,
+  title={Cargo cult science},
+  author={Feynman, Richard P},
+  booktitle={The art and science of analog circuit design},
+  pages={55--61},
+  year={1998},
+  publisher={Elsevier}
+}
+
+@article{hurlbert1984pseudoreplication,
+  title={Pseudoreplication and the design of ecological field experiments},
+  author={Hurlbert, Stuart H},
+  journal={Ecological monographs},
+  volume={54},
+  number={2},
+  pages={187--211},
+  year={1984},
+  publisher={Wiley Online Library}
+}
+
+@article{grant2014converting,
+  title={Converting an odds ratio to a range of plausible relative risks for better communication of research findings},
+  author={Grant, Robert L},
+  journal={Bmj},
+  volume={348},
+  year={2014},
+  publisher={British Medical Journal Publishing Group}
+}
+
+@article{george2020s,
+  title={What’s the risk: differentiating risk ratios, odds ratios, and hazard ratios?},
+  author={George, Andrew and Stead, Thor S and Ganti, Latha},
+  journal={Cureus},
+  volume={12},
+  number={8},
+  year={2020},
+  publisher={Cureus}
+}
+
+@incollection{kruppa2021spielerisch,
+  title={Spielerisch Daten reinigen},
+  author={Kruppa, Jochen and Sieg, Miriam},
+  booktitle={Zeig mir Health Data Science!},
+  pages={93--103},
+  year={2021},
+  publisher={Springer}
+}
+
+@book{salsburg2001lady,
+  title={The lady tasting tea: How statistics revolutionized science in the twentieth century},
+  author={Salsburg, David},
+  year={2001},
+  publisher={Macmillan}
+}
+
+@article{gigerenzer2004null,
+  title={The null ritual},
+  author={Gigerenzer, Gerd and Krauss, Stefan and Vitouch, Oliver},
+  journal={The Sage handbook of quantitative methodology for the social sciences},
+  pages={391--408},
+  year={2004},
+  publisher={Sage Thousand Oaks, CA}
+}
+
+@misc{wasserstein2019moving,
+  title={Moving to a world beyond “p< 0.05”},
+  author={Wasserstein, Ronald L and Schirm, Allen L and Lazar, Nicole A},
+  journal={The American Statistician},
+  volume={73},
+  number={sup1},
+  pages={1--19},
+  year={2019},
+  publisher={Taylor \& Francis}
+}
+
+@article{hurlbert1984pseudoreplication,
+  title={Pseudoreplication and the design of ecological field experiments},
+  author={Hurlbert, Stuart H},
+  journal={Ecological monographs},
+  volume={54},
+  number={2},
+  pages={187--211},
+  year={1984},
+  publisher={Wiley Online Library}
+}
+
+@book{kery2010introduction,
+  title={Introduction to WinBUGS for ecologists: Bayesian approach to regression, ANOVA, mixed models and related analyses},
+  author={K{\'e}ry, Marc},
+  year={2010},
+  publisher={Academic Press}
+}
+
+@book{bruce2020practical,
+  title={Practical statistics for data scientists: 50+ essential concepts using R and Python},
+  author={Bruce, Peter and Bruce, Andrew and Gedeck, Peter},
+  year={2020},
+  publisher={O'Reilly Media}
+}
+
+@misc{dataviz,
+  author = {Hadley Wickham},
+  title = {{Dataviz and the 20th Anniversary of R, an Interview With Hadley Wickham}},
+  year = 2022,
+  howpublished = {https://medium.com/nightingale/dataviz-and-the-20th-anniversary-of-r-an-interview-with-hadley-wickham-ea245078fc8a},
+  note = {[Online; accessed 2022-03-15]}
 }
 
 
+@article{kruppa2021statistics,
+  title={What statistics instructors need to know about concept acquisition to make statistics stick},
+  author={Kruppa, Jochen and Rohmann, Jessica and Herrmann, Carolin and Sieg, Miriam and Rubarth, Kerstin and Piper, Sophie},
+  journal={Journal of University Teaching \& Learning Practice},
+  volume={18},
+  number={2},
+  pages={02},
+  year={2021}
+}
+
+@book{rauch2020medizinische,
+  title={Medizinische Statistik f{\"u}r Dummies},
+  author={Rauch, Geraldine and Kruppa, Jochen and Grittner, Ulrike and Neumann, Konrad and Herrmann, Carolin},
+  year={2020},
+  publisher={John Wiley \& Sons}
+}
+
+@article{kruppa2019statistik,
+  title={Statistik lebendig lehren durch Storytelling und forschungsbasiertes Lernen},
+  author={Kruppa, Jochen and Kiehne, Bj{\"o}rn},
+  year={2019},
+  journal={Beitr{\"a}ge zu Praxis, Praxisforschung und Forschung},
+  pages={501}
+}
+
+@incollection{kruppa2021spielerisch,
+  title={Spielerisch Daten reinigen},
+  author={Kruppa, Jochen and Sieg, Miriam},
+  booktitle={Zeig mir Health Data Science!},
+  pages={93--103},
+  year={2021},
+  publisher={Springer}
+}
+@misc{wasserstein2016asa,
+  title={The ASA statement on p-values: context, process, and purpose},
+  author={Wasserstein, Ronald L and Lazar, Nicole A},
+  journal={The American Statistician},
+  volume={70},
+  number={2},
+  pages={129--133},
+  year={2016},
+  publisher={Taylor \& Francis}
+}
+
+@article{cadiergues2000comparison,
+  title={A comparison of jump performances of the dog flea, Ctenocephalides canis (Curtis, 1826) and the cat flea, Ctenocephalides felis felis (Bouch{\'e}, 1835)},
+  author={Cadiergues, Marie-Christine and Joubert, Christel and Franc, Michel},
+  journal={Veterinary parasitology},
+  volume={92},
+  number={3},
+  pages={239--241},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@book{dormann2013parametrische,
+  title={Parametrische Statistik},
+  author={Dormann, Carsten F},
+  year={2013},
+  publisher={Springer}
+}
+
+@book{wickham2016r,
+  title={R for data science: import, tidy, transform, visualize, and model data},
+  author={Wickham, Hadley and Grolemund, Garrett},
+  year={2016},
+  publisher={O'Reilly Media, Inc.}
+}
+
+@book{kohler2013biostatistik,
+  title={Biostatistik: Einf{\"u}hrung in die Biometrie f{\"u}r Biologen und Agrarwissenschaftler},
+  author={K{\"o}hler, Wolfgang and Schachtel, Gabriel and Voleske, Peter},
+  year={2013},
+  publisher={Springer-Verlag}
+}
+
+@book{hofmann2010scientific,
+  title={Scientific writing and communication: papers, proposals, and presentations},
+  author={Hofmann, Angelika H},
+  year={2010},
+  publisher={Oxford}
+}
+
+@book{schimel2012writing,
+  title={Writing science: how to write papers that get cited and proposals that get funded},
+  author={Schimel, Joshua},
+  year={2012},
+  publisher={OUP USA}
+}
+
+@article{abind,
+	title = {abind: Combine Multidimensional Arrays},
+	author = {Plate, Tony and Heiberger, Richard},
+	year = {2016},
+	date = {2016},
+	url = {https://CRAN.R-project.org/package=abind}
+}
