--- a/index.qmd
+++ b/index.qmd
@@ -1,9 +1,48 @@
 # Willkommen {.unnumbered}
 
-This is a Quarto book.
+Auf den folgenden Seiten wirst du nochmal die Grundlagen der Mathemeatik in der Statistik lernen. Wir lagern hier die Inhalte die sehr mathematisch sind von den angewandten, statistischen Themen aus. Das heißt, du findest hier sehr viel Mathematik und auch Rechenbeispiele. Es wird aber sehr wenig R Code geben. Das hat den einfachen Grund, das wir eben dann doch mal die Grundlagen in der Mathematik wiederholen müssen. Es kann aber auch sein, dass du gar nicht so viel Mathematik später brauchst - oder wiederkommst, weil du nochmal nachschauen willst, wie du eine Teilstückfläche berechnest. Wir auch immer, hier findest du die Mathematikteile aus meinenen Vorlesungen.
 
-To learn more about Quarto books visit <https://quarto.org/docs/books>.
+::: {.callout-caution collapse="true"}
+## Gesammelte Klausurfragen Bio Data Science
 
-```{r}
-1 + 1
-```
+Du findest die [gesammelten Klausurfragen auf GitHub](https://github.com/jkruppa/exam/blob/main/Gesammelte_Klausurfragen_Bio_Data_Science.pdf) oder auf ILIAS in dem entsprechenden Modul. Die Klausurfragen zu den einzelnen Vorlesungen in einem Modul werden in den entsprechenden Übungen des Moduls besprochen. Bitte komme in die Übungen.
+
+Du brauchst dir die Fragen nicht alle auszudrucken. Wir besprechen die Fragen *teilweise* in den Übungen.
+
+Die finale Version für die Klausur veröffentliche ich Ende Dezember für das Wintersemester bzw. Ende Juni für das Sommersemester.
+:::
+
+## Lernen...
+
+Aktuell gibt es nur die Möglichkeit die Inhalte dieses Skriptes in der Vorlesung "Mathematik und Statistik" an der Hochschule Osnabrück an der Fakultät Agrarwissenschaften und Landschaftsarchitektur (AuL) zu hören. Das Skript wird in der Vorlesung aufgearbeitet und durch Übungen unterstützt. Weitere Unterstützung wie Lehrvideos sind in der Planung.
+
+### ... auf YouTube
+
+![](images/youtube.png){fig-align="center" width="300"}
+
+Aktuell gibt es auf YouTube unter <https://www.youtube.com/c/JochenKruppa> noch **keine** Lehrvideos als Ergänzung zum Mathematikteil. Geplant ist in den Videos Inhalte zu wiederholen und du kannst auf Pause drücken um nochmal die Rechenschritte nachverfolgen zu können.
+
+## Kontakt {#sec-contact-mail}
+
+Wie erreichst du mich? Am einfachsten über die gute, alte E-Mail. Bitte bachte, dass gerade kurz vor den Prüfungen ich mehr E-Mails kriege. Leider kann es dann einen Tick dauern.
+
+![](images/mail.png){fig-align="center" width="200"}
+
+Einfach an [j.kruppa\@hs-osnabrueck.de](mailto:j.kruppa@hs-osnabrueck.de){.email} schreiben. Du findest hier auch eine kurze Formulierungshilfe. Einfach auf den Ausklapppfeil klicken.
+
+**Bitte gib immer in deiner E-Mail dein Modul - was du belegst - mit an.** Pro Semester unterrichte ich immer *drei* sehr ähnlich klingende Module. Daher schau nochmal [hier in der Liste](#sec-vorlesungen-hs), wenn du unsicher bist.
+
+::: {.callout-tip collapse="true"}
+## E-Mailvorlage mit beispielhafter Anrede
+
+Hallo Herr Kruppa,
+
+... ich belege gerade Ihr Modul `Modulname` und hätte eine Bitte/Frage/Anregung...
+
+... ich benötige Hilfe bei der Planung/Auswertung meiner Bachelorarbeit...
+
+Mit freundlichen Grüßen
+
+M. Muster
+:::
+
