--- a/geometry-area.qmd
+++ b/geometry-area.qmd
@@ -7,3 +7,54 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 *Version vom `r format(Sys.time(), '%B %d, %Y um %H:%M:%S')`*
 
 ![](images/caution.png){fig-align="center" width="50%"}
+
+F = Fläche
+
+U = Umfang
+
+## Quadrat
+
+$$
+F = a \cdot a = a^2
+$$
+$$
+U = 4 \cdot a
+$$
+$$
+d = a \sqrt{2} = \sqrt{2\cdot a ^2}
+$$
+
+## Rechteck
+
+$$
+F = a \cdot b 
+$$
+
+$$
+U = 2 \cdot a + 2 \cdot b = a (a+b)
+$$
+
+$$
+d = \sqrt{a^2 + b^2} 
+$$
+## Trapez
+
+$$
+F = m \cdot h = \cfrac{a+b}{2}\cdot h 
+$$
+
+$$
+U = a+b+c+d
+$$
+
+## Parallelogramm
+
+$$
+F = a \cdot h 
+$$
+
+$$
+U = 2(a+b)
+$$
+
+
