--- a/literature.qmd
+++ b/literature.qmd
@@ -2,27 +2,18 @@
 
 *Version vom `r format(Sys.time(), '%B %d, %Y um %H:%M:%S')`*
 
-Was ist gute Literatur? Immer schwer zu beurteilen. Im Folgenden liste ich einige Literaturquellen auf. Zum einen basiert eine Menge von dem R Code auf Wickham [-@wickham2016r] zum Anderen möchtest du dich vielleicht nochmal rechts oder links weiter bilden. Du musst aber nicht um die Klausur bestehen zu können. Siehe es eher als ein Angebot.
-
-::: callout-note
-## Die Frage nach der Klausur...
-
-Und daher hier nochmal gleich zu Anfang, es ist nicht notwendig mehr als das Skript durchzuarbeiten und bei den Übungen zu sein um die Klausur zu bestehen. Für deine Bachelorarbeit wirst du aber Programmieren in R können müssen.
-:::
-
-Neben diesem Modul musst du vermutlich noch andere Module belegen. Deshalb hier eine Auswahl Literatur, die dir helfen mag. Zum einen ist die Literatur anders geschrieben und zum anderen sind dort andere Inhalte.
+Was ist gute Literatur? Immer schwer zu beurteilen. Im Folgenden liste ich einige Literaturquellen auf. Vielleicht möchtest du dich nochmal rechts oder links weiterbilden. Du musst aber nicht um die Klausur bestehen zu können. Siehe es eher als ein Angebot. Neben diesem Modul musst du vermutlich noch andere Module belegen. Deshalb hier eine Auswahl Literatur, die dir helfen mag. Zum einen ist die Literatur anders geschrieben und zum anderen sind dort andere Inhalte.
 
 ## Parametrische Statistik
 
 ![](images/dormann.jpg){fig-align="center" width="200"}
 
-Dormann [-@dormann2013parametrische] liefert ein tolles deutsches Buch für die Vertiefung in die Statistik. Insbesondere wenn du wissenschaftlich Arbeiten willst weit über die Bachelorarbeit hinaus. Dormann baut in seinem Buch eine hervorragende Grundlage auf. Das Buch ist an der Hochschule Osnabrück kostenlos [über den Link](https://link.springer.com/book/10.1007/978-3-662-54684-0) zu erhalten.
-
+Dormann [-@dormann2013parametrische] liefert ein tolles deutsches Buch für die Vertiefung in die Statistik. Wir nutzen das Buch hier um uns nochmal auf die Verteilungen von der mathematischen Seite anzunähern. Wir wollen die Begriffe wie Dichte, Parameter und Schätzer für Verteilungen nochmal genauer anschauen. Das Buch ist an der Hochschule Osnabrück kostenlos [über den Link](https://link.springer.com/book/10.1007/978-3-662-54684-0) zu erhalten.
 
 ## Odds & Ends
 
 ![](images/odds_and_ends.PNG){fig-align="center"}
 
-Am Ende dann noch eine Mathebuch von Weisberg zu finden unter <https://jonathanweisberg.org/vip/>. Eigentlich eher ein Buch über Wahrscheinlichkeiten und wenn ein Buch am Ende stehen muss, dann ist es dieses Buch. Ich finde es sehr spannend zu lesen, aber das ist dann vermutlich *special intrest*.
+Am Ende dann noch eine Mathebuch von Weisberg zu finden unter <https://jonathanweisberg.org/vip/>. Eigentlich eher ein Buch über Wahrscheinlichkeiten und wenn ein Buch am Ende stehen muss, dann ist es dieses Buch. Ich finde es sehr spannend zu lesen. Wir nutzen Teile aus dem Buch für die bedingten Wahrscheinlichkeiten.
 
 ## Referenzen {.unnumbered}
