--- a/geometry-volume.qmd
+++ b/geometry-volume.qmd
@@ -7,3 +7,93 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 *Version vom `r format(Sys.time(), '%B %d, %Y um %H:%M:%S')`*
 
 ![](images/caution.png){fig-align="center" width="50%"}
+
+$V$ = Volumen (Inhalt)
+$O$ = Oberfläche
+$G$ = Grundfläche
+
+## Würfel
+
+$$
+V = a^3
+$$
+
+$$
+o = 6 \cdot a^2
+$$
+
+
+$$
+G = a^2
+$$
+
+$$
+D = a\sqrt{3}
+$$
+
+## Rechteckige Säule
+
+$$
+V = G \cdot h = a \cdot b \cdot c
+$$
+$$
+O = 2ab + 2ac + 2bc  
+$$
+$$
+G = a \cdot b = \cfrac{V}{h}
+$$
+
+## Zylinder
+
+::: column-margin
+Beachte auch folgenden Zusammenhang für den Zylinder:
+
+$$
+r = \sqrt{\cfrac{V}{\pi \cdot h}}
+$$
+:::
+
+$$
+V = G \cdot h = r^2 \cdot \pi \cdot h
+$$
+
+$$
+O = 2 \cdot G + 2r \cdot \pi \cdot h
+$$
+
+$$
+G = r^2 \cdot \pi
+$$
+
+$$
+h = \cfrac{V}{G} = \cfrac{V}{r^2 \cdot \pi}
+$$
+## Kegel
+
+::: column-margin
+Beachte auch folgenden Zusammenhang für den Kegel:
+
+$$
+r = \sqrt{\cfrac{3V}{\pi \cdot h}}
+$$
+
+$$
+h = \sqrt{s^2 - r^2}
+$$
+
+$$
+s = \sqrt{r^2 + h^2}
+$$
+:::
+
+$$
+V = \cfrac{1}{3} \cdot h \cdot r^2 \cdot \pi 
+$$
+$$
+O = r^2 \cdot \pi \cdot s 
+$$
+
+$$
+G = r^2 \cdot \pi
+$$
+
