--- a/geometry-area.qmd
+++ b/geometry-area.qmd
@@ -14,6 +14,7 @@ $U$ = Umfang
 
 ## Quadrat
 
+![](images/quadrat.png){fig-align="center" width="40%"}
 
 
 
@@ -40,6 +41,8 @@ $$
 b = \cfrac{F}{a} = \cfrac{U - 2a}{2}
 $$
 :::
+
+![](images/rechteck.png){fig-align="center" width="50%"}
 
 $$
 F = a \cdot b 
@@ -76,6 +79,8 @@ d = U - (a+b+c)
 $$
 :::
 
+![](images/trapez.png){fig-align="center" width="50%"}
+
 $$
 F = m \cdot h = \cfrac{a+b}{2}\cdot h 
 $$
@@ -99,6 +104,8 @@ $$
 
 :::
 
+![](images/parallelogramm.png){fig-align="center" width="50%"}
+
 $$
 F = a \cdot h 
 $$
@@ -108,6 +115,9 @@ U = 2(a+b)
 $$
 
 ## Dreieck
+
+![](images/dreieck.png){fig-align="center" width="40%"}
+
 
 $$
 F = \cfrac{c \cdot h_c}{2}
@@ -120,6 +130,10 @@ $$
 $$
 h_c = \cfrac{2 \cdot F}{c}
 $$
+
+![](images/dreieck_recht.png){fig-align="center" width="50%"}
+
+
 Bei einem rechtwinkligen Dreieck gilt
 
 $$
@@ -137,6 +151,8 @@ h^2 &= a^2 - p^2
 $$
 
 ## Kreis
+
+![](images/kreis.png){fig-align="center" width="30%"}
 
 $$
 F = r^2 \cdot \pi = \cfrac{d^2 \cdot \pi}{4}
