--- a/geometry-volume.qmd
+++ b/geometry-volume.qmd
@@ -14,6 +14,8 @@ $G$ = Grundfläche
 
 ## Würfel
 
+![](images/wuerfel.png){fig-align="center" width="40%"}
+
 $$
 V = a^3
 $$
@@ -33,6 +35,8 @@ $$
 
 ## Rechteckige Säule
 
+![](images/saeule.png){fig-align="center" width="40%"}
+
 $$
 V = G \cdot h = a \cdot b \cdot c
 $$
@@ -45,6 +49,8 @@ $$
 
 ## Zylinder
 
+![](images/zylinder.png){fig-align="center" width="30%"}
+
 ::: column-margin
 Beachte auch folgenden Zusammenhang für den Zylinder:
 
@@ -52,6 +58,8 @@ $$
 r = \sqrt{\cfrac{V}{\pi \cdot h}}
 $$
 :::
+
+
 
 $$
 V = G \cdot h = r^2 \cdot \pi \cdot h
@@ -70,6 +78,8 @@ h = \cfrac{V}{G} = \cfrac{V}{r^2 \cdot \pi}
 $$
 ## Kegel
 
+![](images/kegel.png){fig-align="center" width="40%"}
+
 ::: column-margin
 Beachte auch folgenden Zusammenhang für den Kegel:
 
@@ -85,6 +95,8 @@ $$
 s = \sqrt{r^2 + h^2}
 $$
 :::
+
+
 
 $$
 V = \cfrac{1}{3} \cdot h \cdot r^2 \cdot \pi 
