--- a/preface.qmd
+++ b/preface.qmd
@@ -6,8 +6,12 @@ In diesem Kapitel nenne ich die wichtigsten Lernziele, die nach dem Lesen des Sk
 
 ## Lernziel 1: Geometrische Berechnungen für die Versuchsplanung durchführen
 
+Wir wollen nochmal lernen, wie wir Berechnungen für Flächen durchführen. Wir brauchen das Wissen um später ausrechnen zu können wie viel Platz wir für einen Versuch brauchen. Dafür wiederholen wir nochmal die gängigsten Formen und Flächen. Ebenso berechnen wir die Volumen von den gänigsten Körpern. Das Wissen brauchen wir um Abschätzen zu können wie viel Torf wir für unsere Töpfe ansetzen müssen oder wie viel Futter wir für unser Tierexperiment einkaufen müssen.
+
 ## Lernziel 2: Grundlagen von Wahrscheinlichkeiten verstehen
+
+Wir wollen lerne, wie sich Wahrscheinlichkeiten zusammensetzen. Also was ist eigentlich eine Wahrscheinlichkeit, wo kommt die Wahrscheinlichkeit her und wie rechnen wir mit Wahrscheinlichkeiten. Darüber hinaus lernen wir auch die bedingte Wahrscheinlichkeit kennen, die wir später in der Statistik nochmal brauchen. Vieles wirst du wiedererkennen. Wir wollen es hier nochmal wiederholen und festigen. 
 
 ## Lernziel 3: Wahrscheinlichkeitsverteilungen verstehen
 
-
+Neben den einfachen Wahrscheinlichkeiten von einem Ereignis, können wir uns auch kompliziertere Wahrscheinlichkeiten vorstellen. Wir schauen uns nicht nur ein Ereignis an, sondern eben eine ganze Reihe von möglichen Ausgängen eines Zufallsprozesses. Daher werden wir hier nochmal die gänigsten Verteilungen wiederholen und uns anschauen, was eigentlich eine Dichtefunktion ist. 
