--- a/probability-distribution.qmd
+++ b/probability-distribution.qmd
@@ -2,7 +2,7 @@
 pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 ```
 
-# Grundlagen der Wahrscheinlichkeitsrechnung {#sec-prob-basic}
+# Wahrscheinlichkeitsverteilungen {#sec-prob-basic}
 
 *Version vom `r format(Sys.time(), '%B %d, %Y um %H:%M:%S')`*
 
