--- a/probability-basic.qmd
+++ b/probability-basic.qmd
@@ -7,6 +7,10 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 *Version vom `r format(Sys.time(), '%B %d, %Y um %H:%M:%S')`*
 
 ![](images/caution.png){fig-align="center" width="50%"}
+
+
+## Regeln
+
 Text
 
 $Pr(A) = 2/3$
