--- a/matrix-basic.qmd
+++ b/matrix-basic.qmd
@@ -7,3 +7,8 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 *Version vom `r format(Sys.time(), '%B %d, %Y um %H:%M:%S')`*
 
 ![](images/caution.png){fig-align="center" width="50%"}
+
+## Vom linearen Gleichungssystem zur Matrix
+
+https://www.studyhelp.de/online-lernen/mathe/matrizen/
+
