--- a/probability-basic.qmd
+++ b/probability-basic.qmd
@@ -11,15 +11,19 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 
 ## Regeln
 
+Und $\cap$
+
+Oder $\cup$
+
 Text
 
 $Pr(A) = 2/3$
 
-$Pr(K_1)$ & $Pr(K_2)$
+$Pr(K_1) \cap \cup Pr(K_2)$
 
 $$
 \begin{aligned}
-Pr(K_1 \& K_2) &= Pr(K_1) \times Pr(K_2) \\
+Pr(K_1 \cap K_2) &= Pr(K_1) \times Pr(K_2) \\
                &= 1/2 \times 1/2 \\
                &= 1/4
 \end{aligned}
