--- a/probability-basic.qmd
+++ b/probability-basic.qmd
@@ -8,7 +8,6 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 
 ![](images/caution.png){fig-align="center" width="50%"}
 
-
 ## Regeln
 
 Und $\cap$
@@ -28,3 +27,16 @@ Pr(K_1 \cap K_2) &= Pr(K_1) \times Pr(K_2) \\
                &= 1/4
 \end{aligned}
 $$
+
+In @tbl-logical-figures
+
+|         Abbildung         |                                |                         Bedeutung                         |
+|:-------------------------:|:----------------:|:--------------------------:|
+| ![](images/schnitt_1.png) |           $A \cup B$           |             $A$ tritt ein oder $B$ tritt ein              |
+| ![](images/schnitt_2.png) |           $A \cap B$           |              $A$ trit ein und $B$ tritt ein               |
+| ![](images/schnitt_3.png) |        $A \setminus B$         |          $A$ tritt ein, aber $B$ tritt nicht ein          |
+| ![](images/schnitt_4.png) | $\bar{A} = \Omega \setminus A$ |                    $A$ tritt nicht ein                    |
+| ![](images/schnitt_5.png) |           $A \cup B$           | Entweder $A$ ein oder $B$ tritt ein oder keins von beiden |
+| ![](images/schnitt_6.png) |         $B \subset A$          |                 $B$ ist Teilmenge von $A$                 |
+
+: Test {#tbl-logical-figures}
