--- a/vector-preface.qmd
+++ b/vector-preface.qmd
@@ -2,8 +2,10 @@
 pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 ```
 
-# Vektor und Matrix Rechnungen {#sec-vec-mat-preface}
+# Vektor und Matrix {#sec-vec-mat-preface}
 
 *Version vom `r format(Sys.time(), '%B %d, %Y um %H:%M:%S')`*
 
-![](images/caution.png){fig-align="center" width="50%"}
+In dem folgenden Kapitel wollen wir uns einmale mit Berechnungen mit Vektoren in @sec-vec beschäftigen. Das Kapitel ist eher kurz und dient nur der Erinnerung, was sind eigentlich Vektoren. Wir nutzen den Begriff häufig in der R Programmierung und wir wollen hier nochmal auf ein paar mathematische Eigenschaften eingehen.
+
+Wichtiger ist in dem Sinne die Berechnungen mit Matrizen in @sec-mat. Wir schauen uns hier nochmal die gängigen Rechenoperationen mit Matrizen an. Wir erschlagen aber nicht alles sondern schauen usn nur ausgewählte Aspekte einmal an. Wir brauchen Teile von den Berechnungen mit Matrizen später in der multiplen linearen Regression in der Statistik.
