--- a/vector-basic.qmd
+++ b/vector-basic.qmd
@@ -7,3 +7,45 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 *Version vom `r format(Sys.time(), '%B %d, %Y um %H:%M:%S')`*
 
 ![](images/caution.png){fig-align="center" width="50%"}
+
+
+## Grundlagen Vektoren
+
+$$
+A= (3 , 5 , 1)^T = \begin{pmatrix} 2 \\ 1 \\ 4 \end{pmatrix} 
+$$
+
+Vektoren der Länge 1 heißen Einheitsvektoren oder normierte Vektoren. Hat ein Vektor die Länge 0, so handelt es sich um den Nullvektor.
+
+$$
+\begin{pmatrix} a_1 \\ a_2 \\ a_3 \end{pmatrix} 
+\pm 
+\begin{pmatrix} b_1 \\ b_2 \\ b_3 \end{pmatrix} 
+= 
+\begin{pmatrix} a_1 \pm b_1 \\ a_2 \pm b_2 \\ a_3 \pm b_3 \end{pmatrix} 
+$$
+
+$$
+\begin{pmatrix}
+2 \\ -1 \\ 5 
+\end{pmatrix}
++
+\begin{pmatrix} 
+8 \\ 1 \\ -3 
+\end{pmatrix} 
+=
+\begin{pmatrix} 
+2+8\\ -1+1 \\ 5+(-3) 
+\end{pmatrix}
+=
+\begin{pmatrix} 
+10\\ 0 \\ 2 
+\end{pmatrix} 
+$$
+
+$$
+2 \cdot \begin{pmatrix} 2 \\ 2 \\ 2 \end{pmatrix}  =
+\begin{pmatrix} 2 \cdot 2 \\ 2 \cdot 2 \\ 2 \cdot 2 \end{pmatrix}  =
+\begin{pmatrix} 4 \\ 4 \\ 4 \end{pmatrix}
+$$
+
