--- a/vector-basic.qmd
+++ b/vector-basic.qmd
@@ -12,8 +12,10 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 ## Grundlagen Vektoren
 
 $$
-A= (3 , 5 , 1)^T = \begin{pmatrix} 2 \\ 1 \\ 4 \end{pmatrix} 
+A= (3, 5, 1)^T = \begin{pmatrix} 3 \\ 5 \\ 1 \end{pmatrix} 
 $$
+
+
 
 Vektoren der Länge 1 heißen Einheitsvektoren oder normierte Vektoren. Hat ein Vektor die Länge 0, so handelt es sich um den Nullvektor.
 
@@ -24,6 +26,7 @@ $$
 = 
 \begin{pmatrix} a_1 \pm b_1 \\ a_2 \pm b_2 \\ a_3 \pm b_3 \end{pmatrix} 
 $$
+Schauen wir uns den Zusammenhang einmal als Zahlenbeispiel an.
 
 $$
 \begin{pmatrix}
@@ -43,9 +46,23 @@ $$
 \end{pmatrix} 
 $$
 
+```{r}
+A <- c(2, -1, 5)
+B <- c(8, 1, -3)
+
+A + B
+```
+
+Wenn wir einen Vektor mit einer Zahl multiplizieren, dann multiplizieren wir jeden Wert des Vektors mit der Zahl.
+
 $$
-2 \cdot \begin{pmatrix} 2 \\ 2 \\ 2 \end{pmatrix}  =
-\begin{pmatrix} 2 \cdot 2 \\ 2 \cdot 2 \\ 2 \cdot 2 \end{pmatrix}  =
-\begin{pmatrix} 4 \\ 4 \\ 4 \end{pmatrix}
+2 \cdot \begin{pmatrix} 1 \\ 3 \\ 4 \end{pmatrix}  =
+\begin{pmatrix} 2 \cdot 1 \\ 2 \cdot 3 \\ 2 \cdot 4 \end{pmatrix}  =
+\begin{pmatrix} 2 \\ 6 \\ 8 \end{pmatrix}
 $$
+```{r}
+A <- c(1, 3, 4)
+
+2 * A
+```
 
