--- a/vector-basic.qmd
+++ b/vector-basic.qmd
@@ -66,3 +66,14 @@ A <- c(1, 3, 4)
 2 * A
 ```
 
+In R haben wir noch die Möglichkeit einen Vektor mit Namen zu versehen.
+
+```{r}
+A <- c(2, -1, 5)
+names(A) <- c("A", "B", "C")
+
+A
+```
+
+
+
