--- a/geometry-unit.qmd
+++ b/geometry-unit.qmd
@@ -10,26 +10,39 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 
 ## Maßeinheiten
 
-| Buchstabe | Präfix | Wissenschaftlich | Zahl              |
-|-----------|--------|------------------|-------------------|
-| T         | Tera-  | $10^{12}$        | 1 000 000 000 000 |
-| G         | Giga-  | $10^{9}$         | 1 000 000 000     |
-| M         | Mega-  | $10^{6}$         | 1 000 000         |
-| k         | Kilo-  | $10^{3}$         | 1 000             |
-| h         | Hekto- | $10^{2}$         | 100               |
+Wozu brauchen wir Maßeinheiten? Zum einen wollen wir nicht immer so große Zahlen schreiben oder aber sehr kleine Zahlen. Die ganzen Nullen machen dann doch den Text sehr unübersichtlich. Aus diesem Grund gibt es mehrere Arten der Kurzschreibweise um Zahlen in einer kürzeren Form darzustellen. In der folgenden @tbl-unit-01 sind einem die sehr großzen Zahlen bis $10^{12}$ einmal dargestellt.
 
-: test
+| Buchstabe | Präfix | Wissenschaftlich | Wissenschaftlich in R | Zahl              |
+|-----------|--------|------------------|-----------------------|-------------------|
+| T         | Tera-  | $10^{12}$        | 1e+12                 | 1 000 000 000 000 |
+| G         | Giga-  | $10^{9}$         | 1e+9                  | 1 000 000 000     |
+| M         | Mega-  | $10^{6}$         | 1e+6                  | 1 000 000         |
+| k         | Kilo-  | $10^{3}$         | 1e+3                  | 1 000             |
+| h         | Hekto- | $10^{2}$         | 1e+2                  | 100               |
 
-| Buchstabe | Präfix | Wissenschaftlich | Zahl                |
-|-----------|--------|------------------|---------------------|
-| d         | Dezi-  | $10^{-1}$        | 0.1                 |
-| c         | Zenti- | $10^{-2}$        | 0.01                |
-| m         | Milli- | $10^{-3}$        | 0.001               |
-| $\mu$     | Mikro- | $10^{-6}$        | 0.000 000 1         |
-| n         | Nano-  | $10^{-9}$        | 0.000 000 000 1     |
-| p         | Pico-  | $10^{-12}$       | 0.000 000 000 000 1 |
+: Große Zahlen mit vielen Nullen mit den jeweiligen Abkürzungen und Schreibweisen. {#tbl-unit-01}
 
-: ghj
+Nachdem wir einmal die ganz großen Zahlen dargestellt haben, wollen wir uns in der @tbl-unit-02 nochmal die ganz kleinen Zahlen einmal anschauen. Besonders die schreibweise mit dem `e` werden wir dann wiederholt in R sehen.
+
+| Buchstabe | Präfix | Wissenschaftlich | Wissenschaftlich in R | Zahl              |
+|-----------|--------|------------------|-----------------------|-------------------|
+| d         | Dezi-  | $10^{-1}$        | 1e-1                  | 0.1               |
+| c         | Zenti- | $10^{-2}$        | 1e-2                  | 0.01              |
+| m         | Milli- | $10^{-3}$        | 1e-3                  | 0.001             |
+| $\mu$     | Mikro- | $10^{-6}$        | 1e-6                  | 0.000 001         |
+| n         | Nano-  | $10^{-9}$        | 1e-9                  | 0.000 000 001     |
+| p         | Pico-  | $10^{-12}$       | 1e-12                 | 0.000 000 000 001 |
+
+: Sehr kleine Zahlen mit vielen Nullen mit den jeweiligen Abkürzungen und Schreibweisen. {#tbl-unit-02}
+
+Wenn dir unklar ist, wie denn eine Zahl mit dem `e` aussehen würde, kannst du die Funktion `format()` mit der Option `scientific = FALSE` nutzen. Damit schaltest du die exponentzielle Schreibweise in R aus.
+
+```{r}
+format(1.8e+7, scientific = FALSE)
+format(1.2e-4, scientific = FALSE)
+```
+
+Viele Taschenrechner haben auch die Möglichkeit das `e` umzurechnen. Meistens sind wir dann aber in R und da können wir dann die obige Funktion schnell nutzen.
 
 ## Flächenmaße
 
@@ -59,7 +72,7 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 ## Prozent, Promille und ppm
 
 |                                                          |                            |              | Ein Zuckerwürfel in                |
-|----------------------------------------------------------|----------------------------|--------------|------------------------------------|
+|---------------------------|---------------|---------------|----------------|
 | 1 Prozent ist 1 Teil von hundert Teilen                  | 10 Gramm pro Kilogramm     | $10 g/kg$    | 0.27 Litern, ca. 2 Tassen          |
 | 1 Promille ist 1 Teil von Tausend Teilen                 | 1 Gramm pro Kilogramm      | $1 g/kg$     | 2.7 Litern, ca. 3.5 Flaschen Wein  |
 | 1 ppm (part per million) ist 1 Teil von 1 Million Teilen | 1 Milligramm pro Kilogramm | $0.001 g/kg$ | 2 700 Litern, ca. einem Tanklaster |
