--- a/geometry-unit.qmd
+++ b/geometry-unit.qmd
@@ -13,7 +13,7 @@ pacman::p_load(tidyverse, readxl, knitr, kableExtra, Hmisc)
 Wozu brauchen wir Maßeinheiten? Zum einen wollen wir nicht immer so große Zahlen schreiben oder aber sehr kleine Zahlen. Die ganzen Nullen machen dann doch den Text sehr unübersichtlich. Aus diesem Grund gibt es mehrere Arten der Kurzschreibweise um Zahlen in einer kürzeren Form darzustellen. In der folgenden @tbl-unit-01 sind einem die sehr großzen Zahlen bis $10^{12}$ einmal dargestellt.
 
 | Buchstabe | Präfix | Wissenschaftlich | Wissenschaftlich in R | Zahl              |
-|-----------|--------|------------------|-----------------------|-------------------|
+|--------------|--------------|--------------|-----------------|--------------|
 | T         | Tera-  | $10^{12}$        | 1e+12                 | 1 000 000 000 000 |
 | G         | Giga-  | $10^{9}$         | 1e+9                  | 1 000 000 000     |
 | M         | Mega-  | $10^{6}$         | 1e+6                  | 1 000 000         |
@@ -25,7 +25,7 @@ Wozu brauchen wir Maßeinheiten? Zum einen wollen wir nicht immer so große Zahl
 Nachdem wir einmal die ganz großen Zahlen dargestellt haben, wollen wir uns in der @tbl-unit-02 nochmal die ganz kleinen Zahlen einmal anschauen. Besonders die schreibweise mit dem `e` werden wir dann wiederholt in R sehen.
 
 | Buchstabe | Präfix | Wissenschaftlich | Wissenschaftlich in R | Zahl              |
-|-----------|--------|------------------|-----------------------|-------------------|
+|--------------|--------------|--------------|-----------------|--------------|
 | d         | Dezi-  | $10^{-1}$        | 1e-1                  | 0.1               |
 | c         | Zenti- | $10^{-2}$        | 1e-2                  | 0.01              |
 | m         | Milli- | $10^{-3}$        | 1e-3                  | 0.001             |
@@ -46,15 +46,19 @@ Viele Taschenrechner haben auch die Möglichkeit das `e` umzurechnen. Meistens s
 
 ## Flächenmaße
 
+In der @tbl-unit-03 sehen wir nochmal die Umrechnung von gängigen Flächenmaßen. Dem einen oder anderen mag der Hektar $ha$ geläufig sein, für alle anderen hier nochmal die Flächen zum nachschlagen. Das Ar $ar$ ist in unterschiedlicher Verwendung, aber hier mit zu Vollständigkeit aufgeführt.
+
 | $km^2$ | $ha$ | $ar$   | $m^2$     |
 |--------|------|--------|-----------|
 | 1      | 100  | 10 000 | 1 000 000 |
 |        | 1    | 100    | 10 000    |
 |        |      | 1      | 100       |
 
-: ad
+: Umrechnung von gängigen Flächenmaßen. {#tbl-unit-03}
 
 ## Volumenmaße
+
+Die @tbl-unit-04 zeigt die Umrechnungen von Volumenmaßen. Häufig benötigen wir verschiedene Volumen bei der Abfüllung von Dünger oder aber auch anderer Flüssigkeiten. Die Bewässerung und auch die Kühlung wird über Volumen geregelt. Auch ist es wichtig zu wisen, wie denn die Idee des *Liters* mit den $m^3$ zusammenhängt.
 
 | Liter   | $hl$ | $l$          | $dl$      | $cl$     | $ml$      |
 |---------|------|--------------|-----------|----------|-----------|
@@ -67,16 +71,14 @@ Viele Taschenrechner haben auch die Möglichkeit das `e` umzurechnen. Meistens s
 | $1cm^3$ |      |              |           |          | 1         |
 |         |      | $1 000 cm^3$ | $100cm^3$ | $10cm^3$ | $1cm^3$   |
 
-: sgdgsd
+: Umrechnung von gängigen Volumenmaßen. {#tbl-unit-04}
 
 ## Prozent, Promille und ppm
 
 |                                                          |                            |              | Ein Zuckerwürfel in                |
-|---------------------------|---------------|---------------|----------------|
+|------------------------|----------------|----------------|----------------|
 | 1 Prozent ist 1 Teil von hundert Teilen                  | 10 Gramm pro Kilogramm     | $10 g/kg$    | 0.27 Litern, ca. 2 Tassen          |
 | 1 Promille ist 1 Teil von Tausend Teilen                 | 1 Gramm pro Kilogramm      | $1 g/kg$     | 2.7 Litern, ca. 3.5 Flaschen Wein  |
 | 1 ppm (part per million) ist 1 Teil von 1 Million Teilen | 1 Milligramm pro Kilogramm | $0.001 g/kg$ | 2 700 Litern, ca. einem Tanklaster |
 
-: test
-
-## 
+: Umrechnung von Prozenten und Anteilen. {#tbl-unit-05}
